Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Wordpress-moje-realizacje by qbaw</title>
+    <title>Wordpress moje realizacje by qbaw</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,16 +15,16 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Wordpress-moje-realizacje</h1>
+        <h1>Wordpress moje realizacje</h1>
         <p></p>
 
-        <p class="view"><a href="https://github.com/qbaw/Wordpress--moje-realizacje">View the Project on GitHub <small>qbaw/Wordpress--moje-realizacje</small></a></p>
+        <p class="view"><a href="https://github.com/qbaw/Wordpress--moje-projekty">View the Project on GitHub <small>qbaw/Wordpress--moje-projekty</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/qbaw/Wordpress--moje-realizacje/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/qbaw/Wordpress--moje-realizacje/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/qbaw/Wordpress--moje-realizacje">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/qbaw/Wordpress--moje-projekty/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/qbaw/Wordpress--moje-projekty/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/qbaw/Wordpress--moje-projekty">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
