--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </ul>
       </header>
       <section>
-        <p><img src="wodpressy/pzks.jpg" alt="pzks"></p>
+        <p><img src="wodpresy/pzks.jpg" alt="pzks"></p>
 
 <h3>
 <a id="strona-dla-powiatowego-zespołu-kształcenia-specjalnego-w-wejherowie" class="anchor" href="#strona-dla-powiatowego-zespo%C5%82u-kszta%C5%82cenia-specjalnego-w-wejherowie" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Strona dla Powiatowego Zespołu Kształcenia Specjalnego w Wejherowie.</h3>
