--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
       </header>
       <section>
         <h3>
+
+<img src="pzks.jpg" alt="pzks" />
 <a id="strona-dla-powiatowego-zespołu-kształcenia-specjalnego-w-wejherowie" class="anchor" href="#strona-dla-powiatowego-zespo%C5%82u-kszta%C5%82cenia-specjalnego-w-wejherowie" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Strona dla Powiatowego Zespołu Kształcenia Specjalnego w Wejherowie.</h3>
 
 <h3>
