--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <a id="strona-którą-zrobiłem-dla-powiatowego-zespołu-kształcenia-specjalnego-w-wejherowie" class="anchor" href="#strona-dla-powiatowego-zespo%C5%82u-kszta%C5%82cenia-specjalnego-w-wejherowie" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Strona dla Powiatowego Zespołu Kształcenia Specjalnego w Wejherowie.</h3>
 
 <h3>
-  <img src="wopr.jpg" alt="WOPR" />
+  <img src="wordpresy/wopr.jpg" alt="WOPR" />
 <a id="strona-dla-wejherowskiego-wopr-u" class="anchor" href="#strona-dla-wejherowskiego-wopr-u" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Strona dla Wejherowskiego WOPR-u</h3>
 
 <h3>
