--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <a id="strona-dla-wejherowskiego-wopr-u" class="anchor" href="#strona-dla-wejherowskiego-wopr-u" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Strona dla Wejherowskiego WOPR-u</h3>
 
 <h3>
+  <img src="wordpresy/wypoczynek.jpg" alt="WOPR" />
 <a id="pensjonat-wypoczynkowy-w-nadolu" class="anchor" href="#pensjonat-wypoczynkowy-w-nadolu" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pensjonat Wypoczynkowy w Nadolu</h3>
 
 <h3>
