--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
 <a id="strona-dla-wejherowskiego-wopr-u" class="anchor" href="#strona-dla-wejherowskiego-wopr-u" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Strona dla Wejherowskiego WOPR-u</h3>
 
 <h3>
-  <img src="wordpresy/wypoczynek.jpg" alt="WOPR" />
+  <img src="wordpresy/wypoczynek.jpg" alt="nadole" />
 <a id="pensjonat-wypoczynkowy-w-nadolu" class="anchor" href="#pensjonat-wypoczynkowy-w-nadolu" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pensjonat Wypoczynkowy w Nadolu</h3>
 
 <h3>
+  <img src="wordpresy/roadtest.jpg" alt="roadtest" />
 <a id="pracownia-badań-psychotechnicznych-road-test" class="anchor" href="#pracownia-bada%C5%84-psychotechnicznych-road-test" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pracownia Badań Psychotechnicznych ROAD-TEST</h3>
       </section>
       <footer>
