--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
+        <img src="2000px-WordPress_logo.svg.png" alt="wordpress" />
         <h1>Wordpress moje realizacje</h1>
         <p></p>
 
