--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <img src="2000px-WordPress_logo.svg.png" alt="wordpress" />
-        <h1>moje realizacje</h1>
+        <h1><center>moje realizacje</center></h1>
         <p></p>
 
         <p class="view"><a href="https://github.com/qbaw/Wordpress--moje-projekty">View the Project on GitHub <small>qbaw/Wordpress--moje-projekty</small></a></p>
