--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <img src="2000px-WordPress_logo.svg.png" alt="wordpress" />
+        <img src="wp5.png" alt="wordpress" />
         <h1><center>moje realizacje</center></h1>
         <p></p>
 
