--- a/index.html
+++ b/index.html
@@ -29,22 +29,20 @@
         </ul>
       </header>
       <section>
-        <h3>
+        
 
+<center><h3><a id="strona-którą-zrobiłem-dla-powiatowego-zespołu-kształcenia-specjalnego-w-wejherowie" class="anchor" href="#strona-dla-powiatowego-zespo%C5%82u-kszta%C5%82cenia-specjalnego-w-wejherowie" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Strona dla Powiatowego Zespołu Kształcenia Specjalnego w Wejherowie.</h3></center>
 <img src="pzks.jpg" alt="pzks" />
-<a id="strona-którą-zrobiłem-dla-powiatowego-zespołu-kształcenia-specjalnego-w-wejherowie" class="anchor" href="#strona-dla-powiatowego-zespo%C5%82u-kszta%C5%82cenia-specjalnego-w-wejherowie" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Strona dla Powiatowego Zespołu Kształcenia Specjalnego w Wejherowie.</h3>
 
-<h3>
-  <img src="wordpresy/wopr.jpg" alt="WOPR" />
-<a id="strona-dla-wejherowskiego-wopr-u" class="anchor" href="#strona-dla-wejherowskiego-wopr-u" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Strona dla Wejherowskiego WOPR-u</h3>
+<center><h3><a id="strona-dla-wejherowskiego-wopr-u" class="anchor" href="#strona-dla-wejherowskiego-wopr-u" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Strona dla Wejherowskiego WOPR-u</h3></center>
+<img src="wordpresy/wopr.jpg" alt="WOPR" />
 
-<h3>
-  <img src="wordpresy/wypoczynek.jpg" alt="nadole" />
-<a id="pensjonat-wypoczynkowy-w-nadolu" class="anchor" href="#pensjonat-wypoczynkowy-w-nadolu" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pensjonat Wypoczynkowy w Nadolu</h3>
+<center><h3><a id="pensjonat-wypoczynkowy-w-nadolu" class="anchor" href="#pensjonat-wypoczynkowy-w-nadolu" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pensjonat Wypoczynkowy w Nadolu</h3></center>
+<img src="wordpresy/wypoczynek.jpg" alt="nadole" />
 
-<h3>
-  <img src="wordpresy/roadtest.jpg" alt="roadtest" />
-<a id="pracownia-badań-psychotechnicznych-road-test" class="anchor" href="#pracownia-bada%C5%84-psychotechnicznych-road-test" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pracownia Badań Psychotechnicznych ROAD-TEST</h3>
+<center><h3><a id="pracownia-badań-psychotechnicznych-road-test" class="anchor" href="#pracownia-bada%C5%84-psychotechnicznych-road-test" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pracownia Badań Psychotechnicznych ROAD-TEST</h3></center>
+<img src="wordpresy/roadtest.jpg" alt="roadtest" />
+
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/qbaw">qbaw</a></p>
