--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
         
 
 <center><h3><a id="strona-którą-zrobiłem-dla-powiatowego-zespołu-kształcenia-specjalnego-w-wejherowie" class="anchor" href="#strona-dla-powiatowego-zespo%C5%82u-kszta%C5%82cenia-specjalnego-w-wejherowie" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Strona dla Powiatowego Zespołu Kształcenia Specjalnego w Wejherowie.</h3></center>
-<img1 src="pzks.jpg" alt="pzks" />
+<img1><img src="pzks.jpg" alt="pzks" /></img1>
 
 <center><h3><a id="strona-dla-wejherowskiego-wopr-u" class="anchor" href="#strona-dla-wejherowskiego-wopr-u" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Strona dla Wejherowskiego WOPR-u</h3></center>
-<img1 src="wordpresy/wopr.jpg" alt="WOPR" />
+<img src="wordpresy/wopr.jpg" alt="WOPR" />
 
 <center><h3><a id="pensjonat-wypoczynkowy-w-nadolu" class="anchor" href="#pensjonat-wypoczynkowy-w-nadolu" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pensjonat Wypoczynkowy w Nadolu</h3></center>
-<img1 src="wordpresy/wypoczynek.jpg" alt="nadole" />
+<img src="wordpresy/wypoczynek.jpg" alt="nadole" />
 
 <center><h3><a id="pracownia-badań-psychotechnicznych-road-test" class="anchor" href="#pracownia-bada%C5%84-psychotechnicznych-road-test" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pracownia Badań Psychotechnicznych ROAD-TEST</h3></center>
-<img1 src="wordpresy/roadtest.jpg" alt="roadtest" />
+<img src="wordpresy/roadtest.jpg" alt="roadtest" />
 
       </section>
       <footer>
