--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
         
 
 <center><h3><a id="strona-którą-zrobiłem-dla-powiatowego-zespołu-kształcenia-specjalnego-w-wejherowie" class="anchor" href="#strona-dla-powiatowego-zespo%C5%82u-kszta%C5%82cenia-specjalnego-w-wejherowie" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Strona dla Powiatowego Zespołu Kształcenia Specjalnego w Wejherowie.</h3></center>
-<img src="pzks.jpg" alt="pzks" /></br></br>
+<img src="pzks.jpg" alt="pzks" />
+
+<hr size="2" />
+</br></br>
 
 <center><h3><a id="strona-dla-wejherowskiego-wopr-u" class="anchor" href="#strona-dla-wejherowskiego-wopr-u" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Strona dla Wejherowskiego WOPR-u</h3></center>
 <img src="wordpresy/wopr.jpg" alt="WOPR" /></br></br>
