--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <center><h3><a id="strona-którą-zrobiłem-dla-powiatowego-zespołu-kształcenia-specjalnego-w-wejherowie" class="anchor" href="#strona-dla-powiatowego-zespo%C5%82u-kszta%C5%82cenia-specjalnego-w-wejherowie" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Strona dla Powiatowego Zespołu Kształcenia Specjalnego w Wejherowie.</h3></center>
 <img src="pzks.jpg" alt="pzks" /></br></br>
 
-<tekst> kjlkjkjjkjlkjlkjkjlkjjjljlkljljlkjljljljljljljlkjlkjlkjlkjlkjljljljljlkjljljljljljljljljljlkjljljljljljljljlkjljljjljljljljllkjjljkjljlkjljljljljjlkjljlkjljljljljlkjlkjlkjljljlkjlkjlkjljljljljljljljll</tekst>
+<tekst><p jjljljljljllkjjljkjljlkjljljljljjlkjljlkjljljljljlkjlkjlkjljljlkjlkjlkjljljljljljljljll</p></tekst>
 
 
 <hr size="2" />
