--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li><a href="https://github.com/qbaw/Wordpress--moje-projekty/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/qbaw/Wordpress--moje-projekty">View On <strong>GitHub</strong></a></li>
         </ul>
-        <tile1>ala ma kota kot ma ale</tile1>
+        <p><tile1>ala ma kota kot ma ale</tile1></P>
       </header>
       <section>
         
