--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           <li><a href="https://github.com/qbaw/Wordpress--moje-projekty">View On <strong>GitHub</strong></a></li>
         </ul>
         <center><p><tile1>fb</tile1></P></center>
+        <center><p><tile2>fb</tile2></P></center>
       </header>
       <section>
         
