--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Wordpress moje realizacje by qbaw</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="css/fontello.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
@@ -27,7 +28,7 @@
           <li><a href="https://github.com/qbaw/Wordpress--moje-projekty/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/qbaw/Wordpress--moje-projekty">View On <strong>GitHub</strong></a></li>
         </ul>
-        <center><p><tile1><i class="demo-icon icon-facebook-official">&#xe800;</i></tile1></P></center>
+        <center><p><tile1>fb</tile1></P></center>
         <center><p><tile2>fb</tile2></P></center>
       </header>
       <section>
