--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li><a href="https://github.com/qbaw/Wordpress--moje-projekty/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/qbaw/Wordpress--moje-projekty">View On <strong>GitHub</strong></a></li>
         </ul>
-        <center><p><tile1>fb</tile1></P></center>
+        <center><p><tile1><i class="icon-facebook-official"></i></tile1></P></center>
         <center><p><tile2>fb</tile2></P></center>
       </header>
       <section>
