--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li><a href="https://github.com/qbaw/Wordpress--moje-projekty">View On <strong>GitHub</strong></a></li>
         </ul>
         <center><p><tile1><i class="icon-facebook-official"></i></tile1></P></center>
-        <center><p><tile2>fb</tile2></P></center>
+        <center><p><tile2><i class="icon-twitter-squared"></i></tile2></P></center>
       </header>
       <section>
         
