--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </ul>
         <center><p><tile1><i class="icon-facebook-official"></i></tile1></P></center>
         <center><p><tile2><i class="icon-twitter-squared"></i></tile2></P></center>
+        <center><p><tile3><i class="icon-twitter-squared"></i></tile2></P></center>
       </header>
       <section>
         
