--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <div class="wrapper">
       <header>
         <img src="wp5.png" alt="wordpress" />
-        <h1><center>moje realizacje</center></h1>
+        <h1><center>MOJE REALIZACJE</center></h1>
         <p></p>
 
-        <p class="view"><a href="https://github.com/qbaw/Wordpress--moje-projekty">View the Project on GitHub <small>qbaw/Wordpress--moje-projekty</small></a></p>
+        <center><p class="view"><a href="https://github.com/qbaw/Wordpress--moje-projekty">View the Project on GitHub <small>qbaw/Wordpress--moje-projekty</small></a></p></center>
 
 
         <ul>
