--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 <hr size="2" />
 <center><h3><a id="strona-dla-wejherowskiego-wopr-u" class="anchor" href="#strona-dla-wejherowskiego-wopr-u" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Strona dla Wejherowskiego WOPR-u</h3></center>
 <img src="wordpresy/wopr.jpg" alt="WOPR" /></br></br>
+<p>Strona powstała na zamówienie prezesa wejherowskiego WOPR-u w grudniu 2014r. Zastosowany szablon wykonany jest całkowicie przezmnie. Strona posiada dwa aktywne sidbary które mogą pomieścić dwa niezalezne menu. Baner strony posiada wbudowany pokaz slajdów wykonany w technologii flash. Strona główna jest jenocześnie stroną mieszczącą aktualności gdyż kientowi zależało na regularnym prowadzeniu bloga. Każda aktualnośc może być zalążkiem odnoszącym sie do głównego wpisu. Każdy wpis może posiadać osobną galerię</p>.  
 <hr size="2" />
 <center><h3><a id="pensjonat-wypoczynkowy-w-nadolu" class="anchor" href="#pensjonat-wypoczynkowy-w-nadolu" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pensjonat Wypoczynkowy w Nadolu</h3></center>
 <img src="wordpresy/wypoczynek.jpg" alt="nadole" /></br></br>
