--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
 
         <ul>
-          <li><a href="https://github.com/qbaw/Wordpress--moje-projekty/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/qbaw/Wordpress--moje-projekty/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/qbaw/Wordpress--moje-projekty">View On <strong>GitHub</strong></a></li>
+          <li><a href="http://qbaw.github.io/Wordpress--moje-projekty/kontakt.html"> <strong>KONTAKT</strong></a></li>
+          <li><a href=""> <strong>O MNIE</strong></a></li>
+          <li><a href=""> <strong>OFERTA</strong></a></li>
         </ul>
         <center><p><tile1><i class="icon-facebook-official"></i></tile1></P></center>
         <center><p><tile2><i class="icon-twitter-squared"></i></tile2></P></center>
