--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
         <ul>
-          <li><a href="http://qbaw.github.io/Wordpress--moje-projekty/kontakt.html"> <strong>KONTAKT</strong></a></li>
+          <li><a href="http://qbaw.github.io/Wordpress--moje-projekty/kontakt.html">______ <strong>KONTAKT</strong></a></li>
           <li><a href=""> <strong>O MNIE</strong></a></li>
           <li><a href=""> <strong>OFERTA</strong></a></li>
         </ul>
