--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
         <ul>
           <li><a href="http://qbaw.github.io/Wordpress--moje-projekty/kontakt.html"><strong>KONTAKT</strong></a></li>
-          <li><a href=""> <strong>O MNIE</strong></a></li>
-          <li><a href=""> <strong>OFERTA</strong></a></li>
+          <li><a href="http://qbaw.github.io/Wordpress--moje-projekty/o mnie.html"> <strong>O MNIE</strong></a></li>
+          <li><a href="http://qbaw.github.io/Wordpress--moje-projekty/oferta.html"> <strong>OFERTA</strong></a></li>
         </ul>
         <center><p><tile1><i class="icon-facebook-official"></i></tile1></P></center>
         <center><p><tile2><i class="icon-twitter-squared"></i></tile2></P></center>
