--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1><center>MOJE REALIZACJE</center></h1>
         <p></p>
 
-        <center><p class="view"><a href="https://github.com/qbaw/Wordpress--moje-projekty">View the Project on GitHub <small>qbaw/Wordpress--moje-projekty</small></a></p></center>
+        <center><p class="view"><a href="http://qbaw.github.io/Wordpress--moje-projekty">View the Project  <small>Wordpress moje realizacje</small></a></p></center>
 
 
         <ul>
