--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <li><a href="http://qbaw.github.io/Wordpress--moje-projekty/o mnie.html"> <strong>O MNIE</strong></a></li>
           <li><a href="http://qbaw.github.io/Wordpress--moje-projekty/wordpress.html"> <strong>WORDPRESS</strong></a></li>
         </ul>
-        <center><p><tile1> <a href="https://github.com/qbaw"></a><i class="icon-facebook-official"></i></a></tile1></P></center>
+        <center><p><tile1> <a href="https://github.com/qbaw"><i class="icon-facebook-official"></i></a></tile1></P></center>
         <center><p><tile2><i class="icon-twitter-squared"></i></tile2></P></center>
         <center><p><tile3><i class="icon-wordpress"></i></tile3></P></center>
         <center><p><tile4><i class="icon-youtube-squared"></i></tile4></P></center>
