--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
           <li><a href="http://qbaw.github.io/Wordpress--moje-projekty/o mnie.html"> <strong>O MNIE</strong></a></li>
           <li><a href="http://qbaw.github.io/Wordpress--moje-projekty/wordpress.html"> <strong>WORDPRESS</strong></a></li>
         </ul>
-        <center><p><tile1> <a href="https://github.com/qbaw"><i class="icon-facebook-official"></i></a></tile1></P></center>
-        <center><p><tile2><i class="icon-twitter-squared"></i></tile2></P></center>
-        <center><p><tile3><i class="icon-wordpress"></i></tile3></P></center>
-        <center><p><tile4><i class="icon-youtube-squared"></i></tile4></P></center>
+        <center><p><tile1> <a href="https://www.facebook.com"><i class="icon-facebook-official"></i></a></tile1></P></center>
+        <center><p><tile2><a href="https://twitter.com"><i class="icon-twitter-squared"></i></a></tile2></P></center>
+        <center><p><tile3><a href="https://pl.wordpress.org"><i class="icon-wordpress"></i></a></tile3></P></center>
+        <center><p><tile4><a href="https://www.youtube.com"><i class="icon-youtube-squared"></i></a></tile4></P></center>
       </header>
       <section>
         
