--- a/kontakt.html
+++ b/kontakt.html
@@ -22,22 +22,23 @@
         <h1><center>MOJE REALIZACJE</center></h1>
         <p></p>
 
-        <center><p class="view"><a href="https://github.com/qbaw/Wordpress--moje-projekty">View the Project on GitHub <small>qbaw/Wordpress--moje-projekty</small></a></p></center>
+        <center><p class="view"><a href="http://qbaw.github.io/Wordpress--moje-projekty">View the Project  <small>Wordpress moje realizacje</small></a></p></center>
 
 
         <ul>
-          <li><a href="https://github.com/qbaw/Wordpress--moje-projekty/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/qbaw/Wordpress--moje-projekty/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/qbaw/Wordpress--moje-projekty">View On <strong>GitHub</strong></a></li>
+          <li><a href="http://qbaw.github.io/Wordpress--moje-projekty/kontakt.html"><strong>KONTAKT</strong></a></li>
+          <li><a href="http://qbaw.github.io/Wordpress--moje-projekty/o mnie.html"> <strong>O MNIE</strong></a></li>
+          <li><a href="http://qbaw.github.io/Wordpress--moje-projekty/wordpress.html"> <strong>WORDPRESS</strong></a></li>
         </ul>
-        <center><p><tile1><i class="icon-facebook-official"></i></tile1></P></center>
-        <center><p><tile2><i class="icon-twitter-squared"></i></tile2></P></center>
-        <center><p><tile3><i class="icon-wordpress"></i></tile3></P></center>
+        <center><p><tile1> <a href="https://www.facebook.com"><i class="icon-facebook-official"></i></a></tile1></P></center>
+        <center><p><tile2><a href="https://twitter.com"><i class="icon-twitter-squared"></i></a></tile2></P></center>
+        <center><p><tile3><a href="https://pl.wordpress.org"><i class="icon-wordpress"></i></a></tile3></P></center>
+        <center><p><tile4><a href="https://www.youtube.com"><i class="icon-youtube-squared"></i></a></tile4></P></center>
       </header>
       <section>
         
-        jakub_walek@poczta.fm
 
+  
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/qbaw">qbaw</a></p>
@@ -48,4 +49,3 @@
     
   </body>
 </html>
-
