--- a/wordpress.html
+++ b/wordpress.html
@@ -1,1 +1,52 @@
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Wordpress moje realizacje by qbaw</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="css/fontello.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans|Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <img src="wp5.png" alt="wordpress" />
+        <h1><center>MOJE REALIZACJE</center></h1>
+        <p></p>
+
+        <center><p class="view"><a href="http://qbaw.github.io/Wordpress--moje-projekty">View the Project  <small>Wordpress moje realizacje</small></a></p></center>
+
+
+        <ul>
+          <li><a href="http://qbaw.github.io/Wordpress--moje-projekty/kontakt.html"><strong>KONTAKT</strong></a></li>
+          <li><a href="http://qbaw.github.io/Wordpress--moje-projekty/o mnie.html"> <strong>O MNIE</strong></a></li>
+          <li><a href="http://qbaw.github.io/Wordpress--moje-projekty/wordpress.html"> <strong>WORDPRESS</strong></a></li>
+        </ul>
+        <center><p><tile1> <a href="https://www.facebook.com"><i class="icon-facebook-official"></i></a></tile1></P></center>
+        <center><p><tile2><a href="https://twitter.com"><i class="icon-twitter-squared"></i></a></tile2></P></center>
+        <center><p><tile3><a href="https://pl.wordpress.org"><i class="icon-wordpress"></i></a></tile3></P></center>
+        <center><p><tile4><a href="https://www.youtube.com"><i class="icon-youtube-squared"></i></a></tile4></P></center>
+      </header>
+      <section>
+        
+
+
+      </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/qbaw">qbaw</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
+</html>
 
