--- a/wordpress.html
+++ b/wordpress.html
@@ -37,7 +37,21 @@
       </header>
       <section>
         
+        WordPress jest z założenia platformą blogową, lecz mimo to, coraz częściej jest używany jako CMS ( Content Management System – system zarządzania treścią ), do stawiania zwykłych stron, stron firmowych, czy nawet całych serwisów internetowych. Główną jego zaletą jest prostota i intuicyjność, nawet nowi użytkownicy internetu którzy dopiero raczkują w tym temacie, szybko opanują podstawy jego obsługi. Oprócz tego że WordPress jest genialny, szybki i prosty, jest on także dostępny zupełnie za darmo!
+        Silnik WordPressa jest rozwijany przez setki programistów wolontariuszy z całego świata, a oprócz tego, kolejne tysiące freelancerów, webdeveloperów itd, codziennie tworzy nowe szablony oraz wtyczki do WP, których są już tysiące. Ponad 100 milionów użytkowników wybrało WordPressa do zaprezentowania „siebie” w internecie.
+        Jeśli ktoś ma jeszcze jakieś wątpliwości, to spis przykładowych zalet WordPressa jakie przyszły nam do głowy:
 
+</ul>WordPress jest open source,
+WordPress jest darmowy, i rozpowszechniany na licencji GNU (GPL),
+WordPress’a można używać w celach komercyjnych czy zarobkowych, bez żadnych opłat,
+WordPress mimo tego że jest darmowy, jest rozwijany przez setki programistów z całego świata,
+Społeczność WordPress’a jest budowana przez miliony użytkowników na całym świecie,
+WordPress w wersji 3, w przeciągu kilku dni od premiery został pobrany ponad 3 miliony razy,
+WordPress w tej samej wersji, w przeciągu niespełna miesiąca, został pobrany kolejne 11 milionów razy,
+WordPress posiada bazę ponad 10.000 darmowych wtyczek, i cały czas przybywają nowe,
+Z oficjalnej bazy wtyczek WP, wszystkie w sumie, były pobierane ponad 100 milionów razy,
+WordPress działa na wszystkich systemach operacyjnych, na wszystkich przeglądarkach internetowych,
+WordPress zdobywa nagrody jako najlepszy Open Source CMS, między innymi w 2007, 2009 i 2010 roku
 
       </section>
       <footer>
