--- a/wordpress.html
+++ b/wordpress.html
@@ -41,18 +41,19 @@
         Silnik WordPressa jest rozwijany przez setki programistów wolontariuszy z całego świata, a oprócz tego, kolejne tysiące freelancerów, webdeveloperów itd, codziennie tworzy nowe szablony oraz wtyczki do WP, których są już tysiące. Ponad 100 milionów użytkowników wybrało WordPressa do zaprezentowania „siebie” w internecie.
         Jeśli ktoś ma jeszcze jakieś wątpliwości, to spis przykładowych zalet WordPressa jakie przyszły nam do głowy:
 
-</ul>WordPress jest open source,
-WordPress jest darmowy, i rozpowszechniany na licencji GNU (GPL),
-WordPress’a można używać w celach komercyjnych czy zarobkowych, bez żadnych opłat,
-WordPress mimo tego że jest darmowy, jest rozwijany przez setki programistów z całego świata,
-Społeczność WordPress’a jest budowana przez miliony użytkowników na całym świecie,
-WordPress w wersji 3, w przeciągu kilku dni od premiery został pobrany ponad 3 miliony razy,
-WordPress w tej samej wersji, w przeciągu niespełna miesiąca, został pobrany kolejne 11 milionów razy,
-WordPress posiada bazę ponad 10.000 darmowych wtyczek, i cały czas przybywają nowe,
-Z oficjalnej bazy wtyczek WP, wszystkie w sumie, były pobierane ponad 100 milionów razy,
-WordPress działa na wszystkich systemach operacyjnych, na wszystkich przeglądarkach internetowych,
-WordPress zdobywa nagrody jako najlepszy Open Source CMS, między innymi w 2007, 2009 i 2010 roku
-
+<ul>
+<li>WordPress jest open source,</li>
+<li>WordPress jest darmowy, i rozpowszechniany na licencji GNU (GPL),</li>
+<li>WordPress’a można używać w celach komercyjnych czy zarobkowych, bez żadnych opłat,</li>
+<li>WordPress mimo tego że jest darmowy, jest rozwijany przez setki programistów z całego świata,</li>
+<li>Społeczność WordPress’a jest budowana przez miliony użytkowników na całym świecie,</li>
+<li>WordPress w wersji 3, w przeciągu kilku dni od premiery został pobrany ponad 3 miliony razy,</li>
+<li>WordPress w tej samej wersji, w przeciągu niespełna miesiąca, został pobrany kolejne 11 milionów razy,</li>
+<li>WordPress posiada bazę ponad 10.000 darmowych wtyczek, i cały czas przybywają nowe,</li>
+<li>Z oficjalnej bazy wtyczek WP, wszystkie w sumie, były pobierane ponad 100 milionów razy,</li>
+<li>WordPress działa na wszystkich systemach operacyjnych, na wszystkich przeglądarkach internetowych,</li>
+<li>WordPress zdobywa nagrody jako najlepszy Open Source CMS, między innymi w 2007, 2009 i 2010 roku</li>
+</ul>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/qbaw">qbaw</a></p>
