--- a/index.html
+++ b/index.html
@@ -39,7 +39,18 @@
         
 
 <center><h3><a id="strona-powiatowego-zespołu-kształcenia-specjalnego-w-wejherowie" class="anchor" href="#strona-dla-powiatowego-zespo%C5%82u-kszta%C5%82cenia-specjalnego-w-wejherowie" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Strona Powiatowego Zespołu Kształcenia Specjalnego w Wejherowie.</h3></center>
-<img src="pzks.jpg" alt="pzks" /></br></br>
+
+<a href="#" data-title="Lorem ipsum" class="title.ribbon">
+    <img src="pzks.jpg" alt="pzks" />
+</a>
+
+
+
+
+
+
+
+</br></br>
 
  <p style="text-align:justify">Strone ośrodka wykonałem na zamówienie pani dyrektor PZKS. Jest to moje pierwsze zetknięcie z systemem przetwarzania treści Wordpress. Strona opiera sie na szablonie twentyelewen. Szablon ten jest w praktycznie nie zmienionej formie nielicząc dodanych wtyczek czy zmian kolorystycznych i dodanej grafiki. Strona mówi o jednej z większych placówek tego typu w Polsce. Ośrodek posiada nowoczesne wyposażenie i liczne pracownie specjalistyczne: trzy pracownie internetowe, pracownie terapeutyczne: EEG Biofeedback, integracja sensoryczna, polisensoryczne doświadczanie świata, alternatywne metody komunikacji, pracownia Tomatisa, trzy pracownie logopedyczne, cztery pracownie zajęć korekcyjno-kompensacyjnych.Powiatowy Zespół Kształcenia Specjalnego nr 1 im. Janusza Korczaka w Wejherowie zapewnia w Powiecie Wejherowskim kształcenie dzieci i młodzieży o różnym stopniu niepełnosprawności intelektualnej. W skład Ośrodka wchodzą: 1. Szkoła Podstawowa nr 7 Specjalna, 2. Gimnazjum nr 1 Specjalne, 3. Zasadnicza Szkoła Zawodowa nr 5 na podbudowie Gimnazjum Specjalnego, 4. Specjalna Szkoła Przysposabiająca do Pracy,  5. Przyszpitalny Zespół Kształcenia Specjalnego z oddziałem przedszkolnym, szkołą podstawową i gimnazjum.</p> 
 <hr size="2" />
