--- a/index.html
+++ b/index.html
@@ -55,7 +55,14 @@
  <p style="text-align:justify">Strone ośrodka wykonałem na zamówienie pani dyrektor PZKS. Jest to moje pierwsze zetknięcie z systemem przetwarzania treści Wordpress. Strona opiera sie na szablonie twentyelewen. Szablon ten jest w praktycznie nie zmienionej formie nielicząc dodanych wtyczek czy zmian kolorystycznych i dodanej grafiki. Strona mówi o jednej z większych placówek tego typu w Polsce. Ośrodek posiada nowoczesne wyposażenie i liczne pracownie specjalistyczne: trzy pracownie internetowe, pracownie terapeutyczne: EEG Biofeedback, integracja sensoryczna, polisensoryczne doświadczanie świata, alternatywne metody komunikacji, pracownia Tomatisa, trzy pracownie logopedyczne, cztery pracownie zajęć korekcyjno-kompensacyjnych.Powiatowy Zespół Kształcenia Specjalnego nr 1 im. Janusza Korczaka w Wejherowie zapewnia w Powiecie Wejherowskim kształcenie dzieci i młodzieży o różnym stopniu niepełnosprawności intelektualnej. W skład Ośrodka wchodzą: 1. Szkoła Podstawowa nr 7 Specjalna, 2. Gimnazjum nr 1 Specjalne, 3. Zasadnicza Szkoła Zawodowa nr 5 na podbudowie Gimnazjum Specjalnego, 4. Specjalna Szkoła Przysposabiająca do Pracy,  5. Przyszpitalny Zespół Kształcenia Specjalnego z oddziałem przedszkolnym, szkołą podstawową i gimnazjum.</p> 
 <hr size="2" />
 <center><h3><a id="strona-dla-wejherowskiego-wopr-u" class="anchor" href="#strona-dla-wejherowskiego-wopr-u" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Strona dla Wejherowskiego WOPR-u</h3></center>
-<img src="wordpresy/wopr.jpg" alt="WOPR" /></br></br>
+
+<a href="http://wopr.wejherowo.pl/" data-title="WOPR" class=".title.ribbon">
+    <img src="wordpresy/wopr.jpg" alt="WOPR" />
+</a>
+
+
+
+</br></br>
 <p style="text-align:justify">Strona powstała na zamówienie prezesa wejherowskiego WOPR-u w grudniu 2014r. Strona posiada dwa aktywne sidbary które mogą pomieścić dwa niezalezne menu. Baner strony posiada wbudowany pokaz slajdów wykonany w technologii flash. Strona główna jest jenocześnie stroną mieszczącą aktualności gdyż kientowi zależało na regularnym prowadzeniu bloga. Każda aktualnośc może być zalążkiem odnoszącym sie do głównego wpisu. Każdy wpis może posiadać osobną galerię</p>.  
 <hr size="2" />
 <center><h3><a id="pensjonat-wypoczynkowy-w-nadolu" class="anchor" href="#pensjonat-wypoczynkowy-w-nadolu" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pensjonat Wypoczynkowy w Nadolu</h3></center>
@@ -64,7 +71,12 @@
 
 <hr size="2" />
 <center><h3><a id="pracownia-badań-psychotechnicznych-road-test" class="anchor" href="#pracownia-bada%C5%84-psychotechnicznych-road-test" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pracownia Badań Psychotechnicznych ROAD-TEST</h3></center>
-<img src="wordpresy/roadtest.jpg" alt="roadtest" />
+
+<a href="http://road-test.pl/" data-title="ROAD-TEST" class=".title.ribbon">
+    <img src="wordpresy/roadtest.jpg" alt="roadtest" />
+</a>
+
+
 <p style="text-align:justify"> Strona wykonana na zlecenie mojej żony :). Opiera sie ona na bazie szablonu mojego autorstwa. Posiada horyzontalnie przewijajace sie slidery ze zdjeciami aparatury do wykonywania testów psychotechnicznych. Posiada wbudowany formulaz kontaktowy. Posiada graficzna lokalizacje na podpietych mapach google. Przy wykonywaniu strony zależało mi na jak najwiekszej przejżystości oraz prostocie. Wszstkie strony oparte na CMS Wordpress, mają bardzo rozbudowane możliwości rozwoju po przez instalacje wtyczek z każdej strony statycznej przy niewielkim nakładzie pracy można uzyskac pełnoprawnego blooga. Niestety pełna swobode modyfikowania lub tworzenia od podstaw szablonów daje dopiero bardzo dobra znajomość HTML i CSS oraz języka PHP  
       </section>
       <footer>
