--- a/index.html
+++ b/index.html
@@ -66,7 +66,13 @@
 <p style="text-align:justify">Strona powstała na zamówienie prezesa wejherowskiego WOPR-u w grudniu 2014r. Strona posiada dwa aktywne sidbary które mogą pomieścić dwa niezalezne menu. Baner strony posiada wbudowany pokaz slajdów wykonany w technologii flash. Strona główna jest jenocześnie stroną mieszczącą aktualności gdyż kientowi zależało na regularnym prowadzeniu bloga. Każda aktualnośc może być zalążkiem odnoszącym sie do głównego wpisu. Każdy wpis może posiadać osobną galerię</p>.  
 <hr size="2" />
 <center><h3><a id="pensjonat-wypoczynkowy-w-nadolu" class="anchor" href="#pensjonat-wypoczynkowy-w-nadolu" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pensjonat Wypoczynkowy w Nadolu</h3></center>
-<img src="wordpresy/wypoczynek.jpg" alt="nadole" /></br></br>
+
+<a href="http://www.wypoczynekwnadolu.pl/" data-title="ROAD-TEST" class=".title.ribbon">
+    <img src="wordpresy/wypoczynek.jpg" alt="nadole" />
+</a>
+
+</br></br>
+
 <p style="text-align:justify">  Strona informacyjna o charakterze wizytówki. Posiada 5 podstron. Istrnieje możliwosć wypełnienia formulaża kontaktowego oraz dodawania komentarzy. Podstrona kontakt posiada osadzoną lokalizacje na mapach google. Strona wykonana jest na szablonie Twentyelewen  </p>
 
 <hr size="2" />
