--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <hr size="2" />
 <center><h3><a id="pensjonat-wypoczynkowy-w-nadolu" class="anchor" href="#pensjonat-wypoczynkowy-w-nadolu" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pensjonat Wypoczynkowy w Nadolu</h3></center>
 
-<a href="http://www.wypoczynekwnadolu.pl/" data-title="ROAD-TEST" class=".title.ribbon">
+<a href="http://www.wypoczynekwnadolu.pl/" data-title="Wypoczynek w Nadolu" class="title.ribbon">
     <img src="wordpresy/wypoczynek.jpg" alt="nadole" />
 </a>
 
@@ -78,7 +78,7 @@
 <hr size="2" />
 <center><h3><a id="pracownia-badań-psychotechnicznych-road-test" class="anchor" href="#pracownia-bada%C5%84-psychotechnicznych-road-test" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pracownia Badań Psychotechnicznych ROAD-TEST</h3></center>
 
-<a href="http://road-test.pl/" data-title="ROAD-TEST" class=".title.ribbon">
+<a href="http://road-test.pl/" data-title="ROAD-TEST" class="title.ribbon">
     <img src="wordpresy/roadtest.jpg" alt="roadtest" />
 </a>
 
