--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <center><h3><a id="strona-powiatowego-zespołu-kształcenia-specjalnego-w-wejherowie" class="anchor" href="#strona-dla-powiatowego-zespo%C5%82u-kszta%C5%82cenia-specjalnego-w-wejherowie" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Strona Powiatowego Zespołu Kształcenia Specjalnego w Wejherowie.</h3></center>
 
-<a href="http://www.sosw-wejherowo.pl/" data-title="PZKS" class=".title.ribbon">
+<a href="http://www.sosw-wejherowo.pl/" data-title="PZKS" class=".ribbon">
     <img src="pzks.jpg" alt="pzks" />
 </a>
 
