--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 
 </br></br>
-<p style="text-align:justify">Strona powstała na zamówienie prezesa wejherowskiego WOPR-u w grudniu 2014r. Strona posiada dwa aktywne sidbary które mogą pomieścić dwa niezalezne menu. Baner strony posiada wbudowany pokaz slajdów wykonany w technologii flash. Strona główna jest jenocześnie stroną mieszczącą aktualności gdyż kientowi zależało na regularnym prowadzeniu bloga. Każda aktualnośc może być zalążkiem odnoszącym sie do głównego wpisu. Każdy wpis może posiadać osobną galerię</p>.  
+<p style="text-align:justify">Strona powstała na zamówienie prezesa wejherowskiego WOPR-u w grudniu 2014r. Strona posiada dwa aktywne sidebary które mogą pomieścić dwa niezależne menu. Baner strony posiada wbudowany pokaz slajdów wykonany w technologii flash. Strona główna jest jednocześnie stroną mieszczącą aktualności gdyż klientowi zależało na regularnym prowadzeniu bloga. Każda aktualność może być zalążkiem odnoszącym się do głównego wpisu. Każdy wpis może posiadać osobną galerię.</p>.  
 <hr size="2" />
 <center><h3><a id="pensjonat-wypoczynkowy-w-nadolu" class="anchor" href="#pensjonat-wypoczynkowy-w-nadolu" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pensjonat Wypoczynkowy w Nadolu</h3></center>
 
