--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 </br></br>
 
-<p style="text-align:justify">  Strona informacyjna o charakterze wizytówki. Posiada 5 podstron. Istrnieje możliwosć wypełnienia formulaża kontaktowego oraz dodawania komentarzy. Podstrona kontakt posiada osadzoną lokalizacje na mapach google. Strona wykonana jest na szablonie Twentyelewen  </p>
+<p style="text-align:justify">  Strona informacyjna o charakterze wizytówki. Posiada 5 podstron. Istnieje możliwość wypełnienia formularza kontaktowego oraz dodawania komentarzy. Podstrona kontakt posiada osadzoną lokalizacje na mapach google. Strona wykonana jest na szablonie „Twentyeleven”  </p>
 
 <hr size="2" />
 <center><h3><a id="pracownia-badań-psychotechnicznych-road-test" class="anchor" href="#pracownia-bada%C5%84-psychotechnicznych-road-test" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pracownia Badań Psychotechnicznych ROAD-TEST</h3></center>
