--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 </br></br>
 
-<p style="text-align:justify">  Strona informacyjna o charakterze wizytówki. Posiada 5 podstron. Istnieje możliwość wypełnienia formularza kontaktowego oraz dodawania komentarzy. Podstrona kontakt posiada osadzoną lokalizacje na mapach google. Strona wykonana jest na szablonie „Twentyeleven”  </p>
+<p style="text-align:justify">  Strona informacyjna o charakterze wizytówki. Posiada 5 podstron. Istnieje możliwość wypełnienia formularza kontaktowego oraz dodawania komentarzy. Podstrona kontakt posiada osadzoną lokalizacje na mapach Google. Strona wykonana jest na szablonie „Twentyeleven”. </p>
 
 <hr size="2" />
 <center><h3><a id="pracownia-badań-psychotechnicznych-road-test" class="anchor" href="#pracownia-bada%C5%84-psychotechnicznych-road-test" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pracownia Badań Psychotechnicznych ROAD-TEST</h3></center>
@@ -83,7 +83,7 @@
 </a>
 
 
-<p style="text-align:justify"> Strona wykonana na zlecenie mojej żony :). Opiera sie ona na bazie szablonu mojego autorstwa. Posiada horyzontalnie przewijajace sie slidery ze zdjeciami aparatury do wykonywania testów psychotechnicznych. Posiada wbudowany formulaz kontaktowy. Posiada graficzna lokalizacje na podpietych mapach google. Przy wykonywaniu strony zależało mi na jak najwiekszej przejżystości oraz prostocie. Wszstkie strony oparte na CMS Wordpress, mają bardzo rozbudowane możliwości rozwoju po przez instalacje wtyczek z każdej strony statycznej przy niewielkim nakładzie pracy można uzyskac pełnoprawnego blooga. Niestety pełna swobode modyfikowania lub tworzenia od podstaw szablonów daje dopiero bardzo dobra znajomość HTML i CSS oraz języka PHP  
+<p style="text-align:justify"> Strona wykonana na zlecenie mojej żony :). Opiera się ona na bazie szablonu mojego autorstwa. Posiada horyzontalnie przewijające się slidery ze zdjęciami aparatury do wykonywania testów psychotechnicznych. Posiada wbudowany formularz kontaktowy. Posiada graficzna lokalizacje na podpiętych mapach Google. Przy wykonywaniu strony zależało mi na jak największej przejrzystości oraz prostocie. Wszystkie strony oparte na CMS Wordpress, mają bardzo rozbudowane możliwości rozwoju po przez instalacje wtyczek z każdej strony statycznej przy niewielkim nakładzie pracy można uzyskać pełnoprawnego bloga. Niestety pełna swobodę modyfikowania lub tworzenia od podstaw szablonów daje dopiero bardzo dobra znajomość HTML, CSS oraz języka PHP.
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/qbaw">qbaw</a></p>
