--- a/o mnie.html
+++ b/o mnie.html
@@ -37,7 +37,7 @@
       </header>
       <section>
         
-      <p>Jestem studentem Podyplomowych Studiów Podstaw Informatyki. A to jest strona z moimi projektami wykonanymi w systemie zarządzania treścią CMS.</p></br>
+      <p>Jestem studentem Podyplomowych Studiów Podstaw Informatyki. A to jest strona z moimi projektami wykonanymi w systemie zarządzania treścią CMS Wordpress.</p></br>
       <p>Jestem też terapeutom w Powiatowym Zespole Kształcenia specjalnego w Wejherowie. Gdzie pracuje z młodzieżą niepełnosprawna. </p>
 
       </section>
