--- a/kontakt.html
+++ b/kontakt.html
@@ -37,7 +37,7 @@
       </header>
       <section>
         
-        <h1><center>e mail: jakub_walek@poczta.fm</center></h1>
+        <h1><center>e-mail: jakub_walek@poczta.fm</center></h1>
         </br></br>
         
       <p style="text-align: center;"><iframe src="http://maps.google.pl/maps?q=54.602418,18.213929&amp;num=1&amp;t=h&amp;ie=UTF8&amp;z=14&amp;ll=54.602428,18.213825&amp;output=embed" height="492" width="594" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
